# Apisync

./: .editorconfig  .health-dashboard.yml  ADR.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  Cargo.toml  README.md  STATUS.md  Taskfile.yml  justfile
.github/: dependabot.yml
.github/workflows/: audit.yml  cargo-deny.yml  ci.yml  coverage.yml  pages-deploy.yml  quality-gate.yml  release.yml  sast.yml  scorecard.yml  security-deep-scan.yml  security-guard.yml  test-simple.yml  trufflehog.yml
benches/: api.rs  graphql_benchmark.rs  perf.rs
docs/adr/: 001-hexagonal-architecture.md  002-hyper-over-axum.md  003-async-graphql.md  004-tokio-tungstenite.md  005-criterion.md
docs/research/: SOTA.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: router_dispatch.rs
src/: endpoints.rs  lib.rs
src/adapters/: graphql.rs  mod.rs
src/adapters/graphql/: mod.rs  schema.rs  server.rs
src/adapters/rest/: hyper_server.rs  mod.rs
src/adapters/websocket/: mod.rs  server.rs
src/application/: handler.rs  mod.rs  router.rs
src/domain/: middleware.rs  mod.rs
src/domain/middleware/: request_id.rs
src/infrastructure/: logging.rs
tests/: README.md  property_tests.rs  rest_integration_tests.rs
