[package]
name = "apisync"
version = "0.1.0"
edition = "2021"
description = "Universal API toolkit with REST, GraphQL, and WebSocket support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/Apisync"

[lib]
name = "apisync"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
tracing = "0.1"
log = "0.4"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3

[[bench]]
name = "perf"
harness = false

[workspace]
members = ["."]
